tests/positive/Literals.mjuvix
module Literals;
  axiom Int : Type;
  axiom String : Type;
  a : Int;
  a := 12313;

  b : Int;
  b := -008;

  c : String;
  c := "hellooooo";
end;