tests/negative/MultipleDeclarations.mjuvix
module MultipleDeclarations;

  axiom a : Type;


  axiom a : Type;
end;